@@ -80,6 +80,7 @@
             }
    }
 
+  :jvm-opts ["--add-modules" "java.xml.bind"]
 
   :figwheel
   {:http-server-root "public"
@@ -110,8 +111,7 @@
 
                    :source-paths ["env/dev/clj"]
                    :plugins [[lein-figwheel "0.5.14"]
-                             
-                             [lein-sassy "1.0.7"]]
+                             [lein-sass "0.4.0"]]
 
                    :injections [(require 'pjstadig.humane-test-output)
                                 (pjstadig.humane-test-output/activate!)]
